[package]
name = "graphite-document-core"
version = "0.1.0"
authors = ["Graphite Authors <contact@graphite.design>"]
edition = "2018"
readme = "../../README.md"
homepage = "https://www.graphite.design"
repository = "https://github.com/GraphiteEditor/Graphite"
license = "Apache-2.0"

[dependencies]
log = "0.4"
# TODO: Swich to kurbo release when derive `PartialEq` is available for BezPath
#kurbo = "0.8.0"
kurbo = {git="https://github.com/0HyperCube/kurbo.git", branch="bezpath-partial-eq"}
serde = { version = "1.0", features = ["derive"] }
