[package]
name = "graphite-document-core"
version = "0.1.0"
authors = ["Graphite Authors <contact@graphite.design>"]
edition = "2018"
readme = "../../README.md"
homepage = "https://www.graphite.design"
repository = "https://github.com/GraphiteEditor/Graphite"
license = "Apache-2.0"

[dependencies]
log = "0.4"
# TODO: Swich to kurbo release when derive `PartialEq` is available for BezPath
kurbo = {git="https://github.com/GraphiteEditor/kurbo.git", branch="bezpath-partial-eq", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
glam = { version = "0.16", features = ["serde"] }
