[package]
name = "graphite-editor-core"
version = "0.1.0"
authors = ["Graphite Authors <contact@graphite.design>"]
edition = "2018"
readme = "../../README.md"
homepage = "https://www.graphite.design"
repository = "https://github.com/GraphiteEditor/Graphite"
license = "Apache-2.0"

[dependencies]
log = "0.4"
bitflags = "1.2.1"

[dependencies.document-core]
path = "../document"
package = "graphite-document-core"
