[package]
name = "graphite-desktop-bundle"
description = "Graphite Desktop Bundle"
# Inherited from workspace - start
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
# Inherited from workspace - end

[dependencies]
cef-dll-sys = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
serde = { workspace = true }
plist = { version = "*" }
