[package]
name = "graphite-desktop-embedded-resources"
# Inherited from workspace - start
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
# Inherited from workspace - end

[dependencies]
include_dir = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(embedded_resources)'] }
