[package]
name = "graphite-desktop-update"
version = "0.0.0"
description = "Graphite Desktop Update"
authors = ["Graphite Authors <contact@graphite.art>"]
license = "Apache-2.0"
repository = ""
edition = "2024"
rust-version = "1.87"

[dependencies]
serde = { workspace = true }
reqwest = { workspace = true }
