[package]
name = "graphite-desktop-wrapper"
# Inherited from workspace - start
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
# Inherited from workspace - end

[features]
gpu = ["graphite-editor/gpu", "graphene-std/shader-nodes"]

[dependencies]
# Local dependencies
graphite-editor = { workspace = true }
graphene-std = { workspace = true }
graph-craft = { workspace = true }
wgpu-executor = { workspace = true }

wgpu = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
ron = { workspace = true}
vello = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
keyboard-types = { workspace = true }
base64 = { workspace = true }
