[package]
name = "document-format"
description = "Typed handle for the .gdd document format, sitting over document-graph-storage and document-container"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[features]
# Runtime bridge: the editor <-> storage conversion methods (stage/commit from a `NodeNetwork`,
# `network_ids`, `declarations`). Off lets a standalone migration tool build without `graph-craft`
# or `core-types`. Forwards to `document-graph-storage/conversion`.
conversion = ["document-graph-storage/conversion", "dep:graph-craft", "dep:core-types"]
# Compressed-archive export/open. Each forwards to the matching `document-container` feature and
# gates that format's `ExportFormat` arm and sink. The folder/memory codec-free core needs neither.
zip = ["document-container/zip"]
xz = ["document-container/xz"]
default = ["conversion", "zip", "xz"]

[dependencies]
document-container = { workspace = true }
document-graph-storage = { workspace = true, default-features = false }
graph-craft = { workspace = true, optional = true }
graphene-resource = { workspace = true }
core-types = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
futures = { workspace = true }
thiserror = "2.0"
log = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
graphene-resource = { workspace = true }
tempfile = "3"
