[package]
name = "graph-storage"
description = "Provides a delta based graph representation used in the Graphite file format"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
graph-craft = { workspace = true }
graphene-resource = { workspace = true }
core-types = { workspace = true }
blake3 = "1.5"
rmp-serde = "1.3"
rustc-hash = "2.0"
thiserror = "2.0"

[dev-dependencies]
graph-craft = { workspace = true, features = ["loading"] }
