[package]
name = "graphite-wasm"
publish = false
version = "0.0.0"
rust-version = "1.88"
authors = ["Graphite Authors <contact@graphite.rs>"]
edition = "2024"
readme = "../../README.md"
homepage = "https://graphite.rs"
repository = "https://github.com/GraphiteEditor/Graphite"
license = "Apache-2.0"

[features]
default = ["gpu"]
gpu = ["editor/gpu"]
tauri = ["editor/tauri"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Local dependencies
editor = { path = "../../editor", package = "graphite-editor", features = [
	"gpu",
	"resvg",
	"vello",
] }
graphene-std = { workspace = true }

# Workspace dependencies
graph-craft = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
math-parser = { workspace = true }
wgpu = { workspace = true }
web-sys = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(wasm_bindgen_unstable_test_coverage)',
] }

[package.metadata.cargo-shear]
ignored = ["wgpu"]
