[package]
name = "graphite-wasm"
publish = false
version = "0.0.0"
rust-version = "1.88"
authors = ["Graphite Authors <contact@graphite.rs>"]
edition = "2024"
readme = "../../README.md"
homepage = "https://graphite.rs"
repository = "https://github.com/GraphiteEditor/Graphite"
license = "Apache-2.0"

[features]
default = ["gpu", "shader-nodes"]
gpu = ["editor/gpu"]
native = []
shader-nodes = ["graphene-std/shader-nodes", "gpu"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Local dependencies
editor = { path = "../../editor", package = "graphite-editor", features = [
	"gpu",
	"resvg",
	"vello",
] }
graphene-std = { workspace = true }

# Workspace dependencies
graph-craft = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
math-parser = { workspace = true }
wgpu = { workspace = true }
web-sys = { workspace = true }
ron = { workspace = true }
serde_json = { workspace = true }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "-g"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["-Os", "-g"]

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(wasm_bindgen_unstable_test_coverage)',
] }

[package.metadata.cargo-shear]
ignored = ["wgpu"]
