[package]
name = "graphite-wasm-wrapper"
publish = false
version = "0.0.0"
rust-version = "1.88"
authors = ["Graphite Authors <contact@graphite.art>"]
edition = "2024"
readme = "../../README.md"
homepage = "https://graphite.art"
repository = "https://github.com/GraphiteEditor/Graphite"
license = "Apache-2.0"

[features]
default = ["gpu", "shader-nodes", "web"]
web = ["editor", "editor?/wasm"]
editor = ["dep:editor", "dep:graphene-std", "dep:graph-craft", "dep:node-macro", "dep:wgpu"]
gpu = ["editor?/gpu"]
shader-nodes = ["graphene-std?/shader-nodes", "gpu"]
native = ["node-macro?/disable-registration"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Local dependencies
editor = { path = "../../editor", package = "graphite-editor", optional = true }
graphite-proc-macros = { workspace = true }
graphene-std = { workspace = true, optional = true }

# Workspace dependencies
graph-craft = { workspace = true, optional = true }
log = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wgpu = { workspace = true, optional = true }
web-sys = { workspace = true }
serde_json = { workspace = true }
tsify = { workspace = true }
node-macro = { workspace = true, optional = true }

[dev-dependencies]
serde_bytes = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(wasm_bindgen_unstable_test_coverage)',
] }

[package.metadata.cargo-shear]
ignored = ["wgpu"]
