[package]
name = "bezier-rs"
version = "0.1.0"
rust-version = "1.66.0"
edition = "2021"
authors = ["Graphite Authors <contact@graphite.rs>"]
description = "Computational geometry algorithms for Bézier segments and shapes useful in the context of 2D graphics"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bezier", "curve", "geometry", "2d", "graphics"]
categories = ["graphics", "mathematics"]
homepage = "https://github.com/GraphiteEditor/Graphite/tree/master/libraries/bezier-rs"
repository = "https://github.com/GraphiteEditor/Graphite/tree/master/libraries/bezier-rs"
documentation = "https://graphite.rs/bezier-rs-demos/"

[dependencies]
glam = { version = "0.22", features = ["serde"] }

dyn-any = { path = "../dyn-any", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
