[package]
name = "bezier-rs"
version = "0.4.0"
rust-version = "1.66.0"
edition = "2021"
authors = ["Graphite Authors <contact@graphite.rs>"]
description = "Computational geometry algorithms for Bézier segments and shapes useful in the context of 2D graphics"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bezier", "curve", "geometry", "2d", "graphics"]
categories = ["graphics", "mathematics"]
homepage = "https://github.com/GraphiteEditor/Graphite/tree/master/libraries/bezier-rs"
repository = "https://github.com/GraphiteEditor/Graphite/tree/master/libraries/bezier-rs"
documentation = "https://graphite.rs/libraries/bezier-rs/"

[dependencies]
glam = { version = "0.25", features = ["serde"] }

dyn-any = { version = "0.3.0", path = "../dyn-any", optional = true }
serde = { workspace = true, optional = true }
log = { workspace = true, optional = true }
