[package]
name = "bezier-rs"
version = "0.4.0"
rust-version = "1.79"
edition = "2021"
authors = ["Graphite Authors <contact@graphite.rs>"]
description = "Computational geometry algorithms for Bézier segments and shapes useful in the context of 2D graphics"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bezier", "curve", "geometry", "2d", "graphics"]
categories = ["graphics", "mathematics"]
homepage = "https://github.com/GraphiteEditor/Graphite/tree/master/libraries/bezier-rs"
repository = "https://github.com/GraphiteEditor/Graphite/tree/master/libraries/bezier-rs"
documentation = "https://graphite.rs/libraries/bezier-rs/"

[dependencies]
# Required dependencies
glam = { version = "0.28", features = ["serde"] }

# Optional local dependencies
dyn-any = { version = "0.3.0", path = "../dyn-any", optional = true }

# Optional workspace dependencies
kurbo = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
log = { workspace = true, optional = true }

[build-dependencies]
# SWC dependencies for compiling TypeScript to JavaScript
swc = "0.289.0"
swc_common = "0.40.0"
swc_ecma_ast = "0.121.0"
swc_ecma_parser = { version = "0.152.0", features = ["verify", "typescript"] }
swc_ecma_transforms_typescript = "0.202.0"
swc_ecma_visit = "0.107.0"

# Additional dependencies
anyhow = "1.0" # For error handling in build.rs

# [package.metadata.docs.rs]
# rustdoc-args = ["--html-in-header", "./header.html"]
