[package]
name = "dyn-any"
version = "0.3.1"
rust-version = "1.66.0"
edition = "2021"
authors = ["Graphite Authors <contact@graphite.rs>"]
description = "An Any trait that works for arbitrary lifetimes"
license = "MIT OR Apache-2.0"
readme = "./README.md"
homepage = "https://graphite.rs/libraries/dyn-any"
repository = "https://github.com/GraphiteEditor/Graphite/tree/master/libraries/dyn-any"
documentation = "https://docs.rs/dyn-any"

[dependencies]
dyn-any-derive = { path = "derive", version = "0.3.0", optional = true }
log = { version = "0.4", optional = true }
glam = { version = "0.25", optional = true, default-features = false }

[features]
derive = ["dyn-any-derive"]
log-bad-types = ["log"]
# Opt into impls for Rc<T> and Arc<T>.
rc = []
# Opt into impls for some glam types
glam = ["dep:glam"]
alloc = []
large-atomics = []
std = ["alloc", "rc", "glam/default"]
default = ["std", "large-atomics"]

[package.metadata.docs.rs]
all-features = true
